--- a/portfolio.html
+++ b/portfolio.html
@@ -20,18 +20,18 @@
         <img src="images/scratchlogo.png" height="100">
         </a>
         <br>
-        <p>This is a Scratch Game I made called food fight</p>
+        <p class="p">This is a Scratch Game I made called food fight</p>
         <br>
         <img src="images/GAMESCREEN.PNG" height="400">
         <img src="images/GAMEBLOCKS.PNG" height="400">
         <br>
-        <p>We made a Sudoku game in MIT App Inventor. There are two levels of different difficulties and an Instructions screen. The app uses touchscreen technology to work.</p>
+        <p class="p">We made a Sudoku game in MIT App Inventor. There are two levels of different difficulties and an Instructions screen. The app uses touchscreen technology to work.</p>
         <br>
         <a target="_blank" href="https://repl.it/@sperrybryan/Interactive-Fiction1">
         <img src="images/seahorsekangaroo.png" height="250">
         </a>
         <br>
-        <p>Try our Interactive fiction made using Python! It's a story about a seahorse and a kangaroo based on the voyage and return plot. Try to survive till the happy ending!</p>
+        <p class="p">Try our Interactive fiction made using Python! It's a story about a seahorse and a kangaroo based on the voyage and return plot. Try to survive till the happy ending!</p>
 	    </body>
 	    <script>
      ;(function (window, document, undefined) {
