--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <img src="images/scratchlogo.png" height="100">
         </a>
         <br>
-        <p class="p">This is a Scratch Game I made called food fight</p>
+        <p class="p">This is a Scratch Game I made called food fight. Use the arrow keys and WASD to move the characters and space/0 to throw food.</p>
         <br>
         <img src="images/GAMESCREEN.PNG" height="400">
         <img src="images/GAMEBLOCKS.PNG" height="400">
