--- a/portfolio.html
+++ b/portfolio.html
@@ -27,11 +27,17 @@
         <br>
         <p class="p">We made a Sudoku game in MIT App Inventor. There are two levels of different difficulties and an Instructions screen. The app uses touchscreen technology to work.</p>
         <br>
-        <a target="_blank" href="https://repl.it/@sperrybryan/Interactive-Fiction1">
-        <img src="images/seahorsekangaroo.png" height="250">
-        </a>
+         <iframe id="if" height="400px" width="60%" src="https://repl.it/@sperrybryan/Interactive-Fiction1?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+        <img src="images/seahorsekangaroo.png" height="400">
         <br>
         <p class="p">Try our Interactive fiction made using Python! It's a story about a seahorse and a kangaroo based on the voyage and return plot. Try to survive till the happy ending!</p>
+        <br>
+        <iframe id="python" height="400px" width="60%" src="https://repl.it/@sperrybryan/roman-numeral?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+	    <img src="images/canopy.PNG" height="400px">
+	    <br>
+	    <p class="p">Try our Roman Numeral Converter made using Python! It can convert to and from Roman Numerals for any number less than 4,000. Have Fun!</p>
+	    <br>
+	    </div>
 	    </body>
 	    <script>
      ;(function (window, document, undefined) {
