--- a/portfolio.html
+++ b/portfolio.html
@@ -37,6 +37,8 @@
 	    <br>
 	    <p class="p">Try our Roman Numeral Converter made using Python! It can convert to and from Roman Numerals for any number less than 4,000. Have Fun!</p>
 	    <br>
+	    <img src="images/stockphoto.PNG" height="400px">
+	    <p class="p">This is an image I manipulated in Python so that there would be Emilia Clarke pointing to an underwater nun and laughing. I also flipped it.</p>
 	    </div>
 	    </body>
 	    <script>
