--- a/portfolio.html
+++ b/portfolio.html
@@ -41,6 +41,9 @@
 	    <p class="p">This is an image I manipulated in Python so that there would be Emilia Clarke pointing to an underwater nun and laughing. I also flipped it.</p>
 	    <img src="images/gui.PNG" height="400px">
 	    <p class="p">This is a GUI we created in Python. You can control the amount it rotates how much smaller it gets each time, and some other things.</p>
+	    <img src="images/twilightgraphgboring.PNG" height="400px">
+	    <p class="p">This is a graph that shows the frequency of words in arguably the worst book series ever, Twilight.</p>
+	    </div>
 	    </div>
 	    </body>
 	    <script>
