--- a/portfolio.html
+++ b/portfolio.html
@@ -43,6 +43,8 @@
 	    <p class="p">This is a GUI we created in Python. You can control the amount it rotates how much smaller it gets each time, and some other things.</p>
 	    <img src="images/twilightgraphboring.PNG" height="400px">
 	    <p class="p">This is a graph that shows the frequency of words in arguably the worst book series ever, Twilight.</p>
+	    <img src="images/finalthinh.PNG" height="400px"><img src="images/finalthingccoer.PNG" height=400px>
+	    <p class="p">This is some code I modified in netlogo to do stuff.</p>
 	    </div>
 	    </div>
 	    </body>
